platform-infra/clusters/prod/ingress/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: env-prod-api-ingress
  namespace: env-prod
  annotations:
    argocd.argoproj.io/sync-wave: "10"
spec:
  entryPoints:
    - websecure
  routes:
  - match: HostSNI(`env-prod.appfactory.local`)
    priority: 10
    services:
    - name: env-prod
      namespace: env-prod
      port: 443
  tls:
    passthrough: true
